--- a/.github/workflows/workflow_one.yaml
+++ b/.github/workflows/workflow_one.yaml
@@ -1,1 +1,14 @@
 name: github workflow
+
+on:
+    push:
+        branches:
+            - main
+    workflow_dispatch:
+
+jobs:
+    hello:
+        runs-on: ubuntu-latest
+        steps:
+            - name: print message
+              run: echo Ready to begin
